<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Activity_Inscription"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/bleu"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="20sp"
        android:src="@drawable/conx"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ins"
        android:textStyle="bold"
        android:textSize="@dimen/_28ssp"
        android:textColor="@color/black"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/nom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:inputType="text"
        android:hint="@string/nom"
        android:background="@drawable/styleinput"
        android:shadowColor="@color/gris"
        android:paddingStart="@dimen/_20sdp"
        android:textSize="@dimen/_20ssp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="@dimen/_5sdp"
        />
    <EditText
        android:id="@+id/prenom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingStart="@dimen/_20sdp"
        android:textSize="@dimen/_20ssp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:inputType="text"
        android:hint="@string/prenom"
        android:background="@drawable/styleinput"
        android:shadowColor="@color/gris"
        android:drawableStart="@drawable/famile"
        android:drawablePadding="@dimen/_5sdp"
        />
    <EditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingStart="@dimen/_20sdp"
        android:textSize="@dimen/_20ssp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:inputType="textEmailAddress"
        android:hint="@string/mail"
        android:background="@drawable/styleinput"
        android:shadowColor="@color/gris"
        android:drawableStart="@drawable/mail"
        />
    <TextView
        android:id="@+id/radiobutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etat"
        android:textStyle="bold"
        android:textSize="@dimen/_22ssp"
        android:layout_marginTop="@dimen/_17sdp"
        android:layout_marginStart="@dimen/_18sdp"
        android:textColor="@color/black"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp">
        <RadioButton
            android:id="@+id/nonvoyant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/avg"
            android:textSize="@dimen/_20ssp"
            android:checked="false"
            android:layout_marginTop="@dimen/_12sdp"
            android:theme="@style/RadioButtonStyle"/>
        <RadioButton
            android:id="@+id/malvoyant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mal"
            android:textSize="@dimen/_20ssp"
            android:checked="false"
            android:layout_marginTop="@dimen/_12sdp"
            android:theme="@style/RadioButtonStyle"/>
    </RadioGroup>

    <EditText
        android:id="@+id/motsdepasse"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingStart="@dimen/_20sdp"
        android:textSize="@dimen/_20ssp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@drawable/styleinput"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/mtp"
        android:inputType="textPassword"
        android:shadowColor="@color/gris"
        android:drawablePadding="@dimen/_5sdp"
        />

    <EditText
        android:id="@+id/vmotsdepasse"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingStart="@dimen/_20sdp"
        android:textSize="@dimen/_20ssp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:inputType="textPassword"
        android:hint="@string/validmtp"
        android:background="@drawable/styleinput"
        android:shadowColor="@color/gris"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="@dimen/_5sdp"
        />
    <Button
        android:id="@+id/inscription"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:paddingStart="@dimen/_20sdp"
        android:textSize="@dimen/_20ssp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:text="@string/ins"
        android:background="@drawable/stylebutton"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/conx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conx"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_17ssp"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/_20sdp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/bleu"/>

</LinearLayout>
</ScrollView>