<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.Activity_settingpassword"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bleu">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/retourmot"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:src="@drawable/retour" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginStart="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:title="@string/mtp"
                app:titleTextColor="@color/white" />
            <ImageView
                android:id="@+id/voicemots"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_260sdp"
                android:src="@drawable/voice" />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mtpA"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/mdpc"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/styleinput"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_20sdp"
        android:hint="@string/smtpA"
        android:textSize="@dimen/_16ssp"
        android:drawablePadding="@dimen/_10sdp"
        android:drawableStart="@drawable/lock"
      />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nmtp"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/nmdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/styleinput"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_20sdp"
        android:hint="@string/nvmtp"
        android:textSize="@dimen/_16ssp"
        android:drawablePadding="@dimen/_10sdp"
        android:drawableStart="@drawable/lock"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cnmtp"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/cnmdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/styleinput"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_20sdp"
        android:hint="@string/cmdp"
        android:textSize="@dimen/_16ssp"
        android:drawablePadding="@dimen/_10sdp"
        android:drawableStart="@drawable/lock"/>
    <Button
        android:id="@+id/modifmtdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/modef"
        android:background="@drawable/stylebutton"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        android:layout_marginTop="@dimen/_20sdp"
        />

</LinearLayout>
</ScrollView>