<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Activity_settingusername"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bleu">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/retournom"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:src="@drawable/retour" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginStart="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:title="@string/nomprenom"
                app:titleTextColor="@color/white" />
            <ImageView
                android:id="@+id/voicenompre"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_260sdp"
                android:src="@drawable/voice" />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        android:layout_marginStart="@dimen/_20sdp"
        android:textSize="@dimen/_28ssp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_30sdp"/>

    <EditText
        android:id="@+id/nomchange"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@drawable/styleinput"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:hint="@string/entnom"
        android:inputType="text"
        android:paddingStart="@dimen/_15sdp"
        android:shadowColor="@color/gris"
        android:textSize="@dimen/_16ssp"
        android:drawablePadding="@dimen/_10sdp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prenom"
        android:layout_marginStart="@dimen/_20sdp"
        android:textSize="@dimen/_28ssp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_30sdp"/>
    <EditText
        android:id="@+id/prenomchange"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:inputType="text"
        android:hint="@string/entnompre"
        android:background="@drawable/styleinput"
        android:shadowColor="@color/gris"
        android:textSize="@dimen/_16ssp"
        android:drawablePadding="@dimen/_10sdp"
        android:paddingStart="@dimen/_15sdp"
        android:drawableStart="@drawable/famile"
        />
    <Button
        android:id="@+id/modifusename"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:text="@string/modef"
        android:background="@drawable/stylebutton"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp" />

</LinearLayout>
</ScrollView>