<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.changepassword"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bleu">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:title="@string/nmtp"
                app:titleTextColor="@color/white" />

        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_20sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nmtp"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_25ssp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/smdp2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:paddingStart="@dimen/_10sdp"
            android:textSize="@dimen/_16ssp"
            android:drawablePadding="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/styleinput"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:hint="@string/saisirnoumdp"
            android:inputType="textPassword"
            android:shadowColor="@color/gris"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cnmtp"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_25ssp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/cvmdp2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingStart="@dimen/_20sdp"
            android:textSize="@dimen/_16ssp"
            android:drawablePadding="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/styleinput"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:hint="@string/confirme"
            android:inputType="textPassword"
            android:shadowColor="@color/gris"
            />

        <Button
            android:id="@+id/mdpv22"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="40sp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/stylebutton"
            android:text="@string/valider"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>